force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <pluralLabel>Payments</pluralLabel>
    <description>Stores financial transactions for EMI collections and repayments.</description>
    <nameField>
        <label>Payment Reference</label>
        <type>AutoNumber</type>
        <displayFormat>PAY-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>