force-app/main/default/objects/Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
    <description>Transaction date.</description>
    <inlineHelpText>Transaction date.</inlineHelpText>
    <required>true</required>
    <defaultValue>TODAY()</defaultValue>
</CustomField>