force-app/main/default/objects/Payment__c/fields/Student_Application__c.field-meta.xml
<CustomField>
    <fullName>Student_Application__c</fullName>
    <label>Student Application</label>
    <type>Lookup</type>
</CustomField>