force-app/main/default/objects/Payment__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <type>Text</type>
    <description>External reference code from bank gateway (External ID).</description>
    <inlineHelpText>External reference code from bank gateway (External ID).</inlineHelpText>
    <length>100</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <required>true</required>
</CustomField>